bug 14453 - Layout broken on "Get tickets" localized string (hgrev: 0c778222c7b9)
git-svn-id: http://publicsvn.songbirdnest.com/client/trunk@12257 5aad4ff5-4b58-4159-ba3f-0e6328df4cad

--- a/extensions/concerts/chrome/skin/browse.css
+++ b/extensions/concerts/chrome/skin/browse.css
@@ -118,6 +118,7 @@ img.clickable {
 td.tickets, td.gcal {
 	width:7em;
 	text-align:center;
+	white-space: nowrap;
 }
 .get-tickets{
 	font-size:.85em;
